# droidrundepedency

./: .gitignore  ADB_PYTHON_INSTALLER.md  AI_PROMPT_SHORT.md  AI_PROMPT_SSH_TERMUX.md  BOOTSTRAP_PACKAGES_ANALYSIS.md  BUILD_ANDROID_WHEELS.md  BUILD_PYDANTIC_CORE_DEB.md  CLEAN_REINSTALL_PLAN.md  CREATE_RELEASE_NOW.md  CROSS_COMPILE_ANDROID_NOTES.md  DEPENDENCIES.md  DROIDRUN_ESSENTIAL_ANALYSIS.md  DROIDRUN_INSTALLATION_PLAN.md  HOW_TO_CREATE_DROIDRUN_DEB.md  MANUAL_RELEASE_STEPS.txt  MANUAL_SSH_COMMANDS.md  MISSING_DEPENDENCIES.md  PACKAGES_TO_REMOVE.md  README.md  RELEASE_INSTRUCTIONS.md  RUN_DROIDRUN_WITH_GEMINI.md  RUN_PHASE3_MANUAL.md  SCIKIT_LEARN_ERROR_ANALYSIS.md  STABLE_WHEEL_BUILD_METHOD.md  TERMUX_DROIDRUN_COMMANDS.sh  TERMUX_PYTHON_CROSS_COMPILE_ANALYSIS.md  TERMUX_QUICK_REFERENCE.md  TERMUX_SSH_SETUP.md  VERIFY_RELEASE.md  adb_setup_ssh_termux.sh  add_android_to_path.ps1  add_android_to_path.sh  build.sh  build_droidrun_wheels_android.sh  build_grpcio_android.sh  build_grpcio_android_ubuntu_x86_64.sh  build_grpcio_android_wsl.sh  build_orjson_android_x86_64.sh  build_orjson_termux.sh  build_orjson_termux_env.sh  (+48 more)
backup/: pkg_install_list.txt
docs/: BUILD.md  README-ORGANIZATION.md  README.md  TROUBLESHOOTING.md  bootstrap-creation-guide.md  build-numpy-commands.txt  build-numpy-wheel.sh  build-pillow-commands.txt  emulator-requirements.md  installdroidrun  kill-zombie-processes-commands.txt  quick-wsl-commands.txt  termux-build-commands.txt  wheelbuildcmd.txt  (+1 more)
droidrun-depedencybuilder/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
(+138 files in other folders)
